--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@canva/error": "^2.1.0",
     "@canva/platform": "^2.1.0",
     "@canva/user": "^2.1.0",
+    "node-fetch": "^2.7.0",
+    "openai": "^4.97.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-intl": "6.8.7"
@@ -47,6 +49,7 @@
     "@formatjs/ts-transformer": "3.13.27",
     "@ngrok/ngrok": "1.4.1",
     "@svgr/webpack": "8.1.0",
+    "@tailwindcss/postcss": "^4.1.6",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/debug": "4.1.12",
@@ -61,6 +64,7 @@
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "@types/webpack-env": "1.18.5",
+    "autoprefixer": "^10.4.21",
     "chalk": "4.1.2",
     "cli-table3": "0.6.5",
     "css-loader": "7.1.2",
@@ -79,14 +83,15 @@
     "jsonwebtoken": "9.0.2",
     "jwks-rsa": "3.1.0",
     "mini-css-extract-plugin": "2.9.2",
-    "node-fetch": "3.3.2",
     "node-forge": "1.3.1",
     "nodemon": "3.0.1",
     "open": "8.4.2",
+    "postcss": "^8.5.3",
     "postcss-loader": "8.1.1",
     "prettier": "3.4.2",
     "prompts": "2.4.2",
     "style-loader": "4.0.0",
+    "tailwindcss": "^4.1.6",
     "terser-webpack-plugin": "5.3.11",
     "tree-kill": "1.2.2",
     "ts-jest": "29.2.5",
