App sends texts to OpenAI and receives response with translation from the frst language selected

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@canva/error": "^2.1.0",
     "@canva/platform": "^2.1.0",
     "@canva/user": "^2.1.0",
+    "cors": "^2.8.5",
     "node-fetch": "^2.7.0",
     "openai": "^4.97.0",
     "react": "18.3.1",
@@ -71,7 +72,7 @@
     "css-modules-typescript-loader": "4.0.1",
     "cssnano": "7.0.6",
     "debug": "4.4.0",
-    "dotenv": "16.4.7",
+    "dotenv": "^16.4.7",
     "eslint": "9.23.0",
     "exponential-backoff": "3.1.1",
     "express": "4.21.2",
