--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
       "styles": ["./styles"]
     }
   },
-  "include": ["**/*", "./node_modules/@types/**/*"],
+  "include": ["backend", "**/*", "./node_modules/@types/**/*"],
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
