--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
     "@tailwindcss/postcss": "^4.1.6",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/cors": "^2.8.18",
     "@types/debug": "4.1.12",
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.21",
     "@types/jest": "29.5.14",
     "@types/jsonwebtoken": "9.0.7",
     "@types/node": "20.10.0",
-    "@types/node-fetch": "2.6.12",
+    "@types/node-fetch": "^2.6.12",
     "@types/node-forge": "1.3.11",
     "@types/nodemon": "1.19.6",
     "@types/prompts": "2.4.9",
@@ -72,10 +73,10 @@
     "css-modules-typescript-loader": "4.0.1",
     "cssnano": "7.0.6",
     "debug": "4.4.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "eslint": "9.23.0",
     "exponential-backoff": "3.1.1",
-    "express": "4.21.2",
+    "express": "^4.21.2",
     "express-basic-auth": "1.2.1",
     "globals": "15.14.0",
     "jest": "29.7.0",
